<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_four">Box Four</string>
    <string name="box_three">Box Three</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_the_box_and_buttons">tap the box and buttons</string>
    <string name="red">red</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
</resources>
